Comment shell and kafka connector tests.